--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./src/index.ts",
+    "start": "ts-node ./src/index.ts",
     "dev": "nodemon ./src/index.ts",
-    "db-setup": "node ./src/db_setup"
+    "db-setup": "ts-node ./src/db_setup"
   },
   "dependencies": {
     "axios": "^1.8.2",
@@ -18,7 +18,8 @@
     "morgan": "~1.9.1",
     "nodemon": "^3.1.9",
     "pg": "^8.13.3",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
